BC-447 Fix navBtnBack visibility

--- a/src/shared/components/navigation/nav-button/NavButton.module.css
+++ b/src/shared/components/navigation/nav-button/NavButton.module.css
@@ -5,3 +5,7 @@
 :global(.dark) .navBtn {
     @apply hover:bg-neutral-800;
 }
+
+.navBtnBack {
+    @apply hidden sm:flex;
+}
